fix horizontal scroll on small screens

--- a/src/assets/scss/4-base/_04-main.scss
+++ b/src/assets/scss/4-base/_04-main.scss
@@ -14,9 +14,9 @@ body {
 .container {
   margin-right: auto;
   margin-left: auto;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  max-width: 54rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
+  max-width: 56rem;
 }
 
 /* titles
